Cambio tipografia y contenido

--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,10 @@
             <p>Y este es el parrado de inicio
                 donde vamos a explicar las ramas
             </p>
+            <p>
+                Los blogs son la mejor forma de compartir
+                informacion y tus ideas. Mucho mas que ir a Youtube.
+            </p>
             </div>
         </div>
     </body>
