--- a/blogspot.html
+++ b/blogspot.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title> El titulo del post </title>
+        <title> Blog de Tulio </title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
    <body>
         <div id="container">
             <div id="cabecera">
-                Blog de Tulio
+                Bienvenidos al Blog 2.0
                 <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
